# league_simulator

arringo/: CMakeLists.txt  README.md
arringo/src/: CMakeLists.txt  LeagueSimulator.hpp  MeanGoalPerGame.csv  Team.hpp  main.cpp
arringo/test/: CMakeLists.txt  main_test.cpp  test.cpp
